tests/algorithms/x/Rust/web_programming/co2_emission.rs
// Generated by Mochi transpiler v0.10.63
use std::sync::atomic::{AtomicBool, AtomicI64, Ordering};
use std::time::{SystemTime, UNIX_EPOCH};
use std::process::Command;
static NOW_SEEDED: AtomicBool = AtomicBool::new(false);
static NOW_SEED: AtomicI64 = AtomicI64::new(0);
fn _now() -> i64 {
    if !NOW_SEEDED.load(Ordering::SeqCst) {
        if let Ok(s) = std::env::var("MOCHI_NOW_SEED") {
            if let Ok(v) = s.parse::<i64>() {
                NOW_SEED.store(v, Ordering::SeqCst);
                NOW_SEEDED.store(true, Ordering::SeqCst);
            }
        }
    }
    if NOW_SEEDED.load(Ordering::SeqCst) {
        let seed = (NOW_SEED.load(Ordering::SeqCst)*1664525 + 1013904223) % 2147483647;
        NOW_SEED.store(seed, Ordering::SeqCst);
        seed
    } else {
        SystemTime::now().duration_since(UNIX_EPOCH).unwrap().as_nanos() as i64
    }
}
fn _mem() -> i64 {
    if let Ok(mut f) = std::fs::File::open("/proc/self/statm") {
        let mut s = String::new();
        use std::io::Read;
        if f.read_to_string(&mut s).is_ok() {
            if let Some(rss) = s.split_whitespace().nth(1) {
                if let Ok(v) = rss.parse::<i64>() {
                    return v * 4096;
                }
            }
        }
    }
    0
}
fn _fetch(url: &str) -> String {
    let out = Command::new("curl").arg("-fsSL").arg(url).output().unwrap();
    let s = String::from_utf8_lossy(&out.stdout);
    if let Some(start) = s.find("\"title\"") {
        let rest = &s[start+8..];
        if let Some(begin) = rest.find('\"') {
            let rest2 = &rest[begin+1..];
            if let Some(end) = rest2.find('\"') {
                return rest2[..end].to_string();
            }
        }
    }
    String::new()
}
#[derive(Debug, Clone, Default)]
struct Intensity {
    forecast: i64,
    actual: i64,
    index: String,
}
impl std::fmt::Display for Intensity {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"forecast\": {}", self.forecast)?;
        write!(f, ", ")?;
        write!(f, "\"actual\": {}", self.actual)?;
        write!(f, ", ")?;
        write!(f, "\"index\": \"{}\"", self.index)?;
        write!(f, "}}")
    }
}

#[derive(Debug, Clone, Default)]
struct Entry {
    from: String,
    to: String,
    intensity: Intensity,
}
impl std::fmt::Display for Entry {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"from\": \"{}\"", self.from)?;
        write!(f, ", ")?;
        write!(f, "\"to\": \"{}\"", self.to)?;
        write!(f, ", ")?;
        write!(f, "\"intensity\": {}", self.intensity)?;
        write!(f, "}}")
    }
}

#[derive(Debug, Clone, Default)]
struct Response {
    data: Vec<Entry>,
}
impl std::fmt::Display for Response {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"data\": {:?}", self.data)?;
        write!(f, "}}")
    }
}

static mut g_BASE_URL: String = String::new();
fn main() {
    unsafe {
        g_BASE_URL = String::from("https://api.carbonintensity.org.uk/intensity");
                let _start: i64 = _now();
        unsafe fn fetch_last_half_hour() -> i64 {
    let mut resp: Response = Response {data: 0};
    let mut entry: Entry = resp.data.clone()[0 as usize].clone();
    return entry.intensity.clone().actual
};
        unsafe fn fetch_from_to(start: &str, end: &str) -> Vec<Entry> {
    let mut url: String = format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", g_BASE_URL, "/"), start), "/"), end).clone();
    let mut resp: Response = Response {data: 0};
    return resp.data.clone()
};
        unsafe fn mochi_main() {
    let mut entries: Vec<Entry> = fetch_from_to(&"2020-10-01", &"2020-10-03");
    let mut i: i64 = 0;
    while (i < (entries.len() as i64)) {
        let mut e: Entry = entries[i as usize].clone();
        println!("{}", format!("{} {} {} {} {} {}", "from", e.from.clone(), "to", e.to.clone(), ":", e.intensity.clone().actual).trim_end());
        i = (i + 1);
    }
    let mut last: i64 = fetch_last_half_hour();
    println!("{}", format!("{} {}", "fetch_last_half_hour() =", last).trim_end());
};
        mochi_main();
        let _end: i64 = _now();
        let duration_us: i64 = ((_end - _start) / 1000);
        let memory_bytes: i64 = _mem();
        println!("{{\n  \"duration_us\": {},\n  \"memory_bytes\": {},\n  \"name\": \"{}\"\n}}", duration_us, memory_bytes, "main");

    }
}
